chore: title update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="./assets/css/app.css" rel="stylesheet">
 		<link href="./assets/images/thumb.png" type="image/png" sizes="32x32" rel="icon">
 		<script src="./assets/js/brain.js"></script>
-		<title>Javascript AI Rock Paper Scissors</title>
+		<title>AI Scissor Paper Stone JS</title>
 	</head>
 
 	<body>
