--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Scissor Paper Stone AI JS">
-    <meta name="author" content="cvera08">
-    <meta property="og:url" content="/">
-    <meta property="og:title" content="Scissor Paper Stone AI JS">
-    <meta property="og:description" content="Scissor Paper Stone AI JS">
-    <link rel="icon" href="./assets/images/thumb.png" type="image/png" sizes="32x32">
-    <link rel="stylesheet" href="./assets/css/app.css">
-    <script src="./assets/js/brain.js" defer></script>
-    <title>AI Scissor Paper Stone JS</title>
-</head>
-<body>
-    <script src="./assets/js/app.js" defer></script>
-</body>
+<html>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+		<meta name="title" content="Scissor Paper Stone AI JS">
+		<meta name="description" content="Scissor Paper Stone AI JS">
+		<meta name="author" content="cvera08">
+		<meta property="og:url" content="/">
+		<meta property="og:title" content="Scissor Paper Stone AI JS">
+		<meta property="og:description" content="Scissor Paper Stone AI JS">
+		<link href="./assets/css/app.css" rel="stylesheet">
+		<link href="./assets/images/thumb.png" type="image/png" sizes="32x32" rel="icon">
+		<script src="./assets/js/brain.js"></script>
+		<title>AI Scissor Paper Stone JS</title>
+	</head>
+
+	<body>
+		<script src="./assets/js/app.js"></script>
+	</body>
 </html>
